[gd_scene load_steps=9 format=3 uid="uid://bkg0l5mggd3vq"]

[ext_resource type="Theme" uid="uid://t6wu146mxlyh" path="res://misc/theme.tres" id="1_77kc0"]
[ext_resource type="Script" path="res://scripts/pre_ui.gd" id="1_llkcr"]
[ext_resource type="FontFile" uid="uid://bolgg3n6g0m3n" path="res://misc/fontreadable.png" id="3_2mwmq"]
[ext_resource type="Texture2D" uid="uid://cn6wejt4mke5y" path="res://sprites/ui/setup.png" id="3_yices"]
[ext_resource type="Texture2D" uid="uid://ckhldamttabg8" path="res://sprites/ui/char_big.png" id="4_ehpnk"]
[ext_resource type="Texture2D" uid="uid://ny64rqs17do3" path="res://sprites/hats/niko_hat.png" id="4_jrjye"]
[ext_resource type="Texture2D" uid="uid://slxf0mpfgyl6" path="res://sprites/shop/cross.png" id="5_2j1bm"]
[ext_resource type="PackedScene" uid="uid://iwx7sruoi7vk" path="res://scenes/shop.tscn" id="6_ujy8l"]

[node name="PreUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_77kc0")
script = ExtResource("1_llkcr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_yices")

[node name="Character" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.084375
anchor_top = 0.225
anchor_right = 0.484375
anchor_bottom = 0.758333
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ehpnk")
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Go" type="Button" parent="M"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_2mwmq")
text = "go"
metadata/_edit_use_anchors_ = true

[node name="Shop" type="Button" parent="M"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_2mwmq")
text = "shop"
metadata/_edit_use_anchors_ = true

[node name="Hats" type="HBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.415625
anchor_top = 0.120833
anchor_right = 0.809375
anchor_bottom = 0.245833
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Hats"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_2mwmq")
toggle_mode = true
icon = ExtResource("5_2j1bm")
metadata/_edit_use_anchors_ = true

[node name="List" type="ItemList" parent="Hats"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_2mwmq")
auto_height = true
max_columns = 4
metadata/_edit_use_anchors_ = true

[node name="Items" type="HBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.490625
anchor_top = 0.495833
anchor_right = 1.02813
anchor_bottom = 0.624999
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Items"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_2mwmq")
toggle_mode = true
icon = ExtResource("5_2j1bm")
metadata/_edit_use_anchors_ = true

[node name="List" type="ItemList" parent="Items"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_2mwmq")
auto_height = true
max_columns = 4
metadata/_edit_use_anchors_ = true

[node name="HatTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 2
anchor_left = 0.190625
anchor_top = 0.225
anchor_right = 0.290625
anchor_bottom = 0.358333
texture = ExtResource("4_jrjye")
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ShopWindow" type="Window" parent="."]
canvas_item_default_texture_filter = 0
initial_position = 2
size = Vector2i(480, 480)
visible = false
unresizable = true
always_on_top = true
content_scale_size = Vector2i(160, 160)
content_scale_mode = 2
content_scale_aspect = 1

[node name="Shop" parent="ShopWindow" instance=ExtResource("6_ujy8l")]

[connection signal="pressed" from="M/Go" to="." method="_on_go_pressed"]
[connection signal="pressed" from="M/Shop" to="." method="_on_shop_pressed"]
[connection signal="toggled" from="Hats/Button" to="." method="_on_hat_toggled"]
[connection signal="item_selected" from="Hats/List" to="." method="_on_hat_list_item_selected"]
[connection signal="toggled" from="Items/Button" to="." method="_on_item_toggled"]
[connection signal="item_selected" from="Items/List" to="." method="_on_item_list_item_selected"]
[connection signal="close_requested" from="ShopWindow" to="." method="_on_shop_window_close_requested"]
